# trend-opportunity-bot

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_analyzer.py  test_collectors.py  test_reporting.py  test_server.py  test_utils.py
trendbot/: analyzer.py  artifacts.py  cli.py  config.py  http.py  models.py  openai_client.py  pipeline.py  reporting.py  server.py  utils.py
trendbot/collectors/: __init__.py  devto.py  github.py  hackernews.py  producthunt.py  reddit.py  substack.py
web/: README.md  index.html  package-lock.json
web/src/: App.css  App.tsx  index.css  parsers.ts  theme.ts  types.ts  useFileText.ts
